[package]
name = "sifer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

# Cryptographic dependencies
aes = "0.8"
xts-mode = "0.5.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
cipher = "0.4"

# File system operations
walkdir = "2.3"

# For async support
tokio = { version = "1.36", features = ["full"] }